--- a/business-modules/part-time-job/pom.xml
+++ b/business-modules/part-time-job/pom.xml
@@ -70,6 +70,10 @@
                 <artifactId>pub-use-authentication</artifactId>
             </dependency>
             <dependency>
+                <groupId>org.example</groupId>
+                <artifactId>pub-modules-entity</artifactId>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-mail</artifactId>
             </dependency>
