兼职小程序后台第一次完整提交

--- a/business-modules/pom.xml
+++ b/business-modules/pom.xml
@@ -19,6 +19,7 @@
         <module>heaven-online-module</module>
         <module>heaven-offline-module</module>
         <module>part-time-job</module>
+        <module>part-time-job-offline</module>
     </modules>
 <dependencies>
     <!-- springboot web -->
