--- a/business-modules/part-time-job-offline/src/main/resources/bootstrap.yml
+++ b/business-modules/part-time-job-offline/src/main/resources/bootstrap.yml
@@ -13,20 +13,20 @@ spring:
       max-file-size: 20MB
       max-request-size: 20MB
   application:
-    name: workonline-service
+    name: workoffline-service
   cloud:
     nacos:
       discovery:
         server-addr: http://10.1.1.232:8848
         #server-addr: http://127.0.0.1:8848
         #server-addr: http://111.230.26.139:8848
-        namespace: workonline
+        namespace: workoffline
       config:
         server-addr: http://10.1.1.232:8848  # nacos地址
         #server-addr: http://127.0.0.1:8848  # nacos地址
         #server-addr: http://111.230.26.139:8848
         file-extension: yaml   #nacos后缀
-        namespace: workonline
+        namespace: workoffline
         # 支持多个共享 Data Id 的配置，优先级小于extension-configs,自定义 Data Id 配置 属性是个集合，内部由 Config POJO 组成。Config 有 3 个属性，分别是 dataId, group 以及 refresh
         # 共享配置
         shared-configs:
